--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+*{
+    box-sizing: content-box;
+}
+
 body{
     background-color: azure;
 }
@@ -10,6 +14,19 @@ header{
 img{
     width: 35rem;
     height: 35rem;
+}
+
+article{
+    display: flex;
+    gap: 1rem;
+    margin-bottom: 50px;
+}
+
+#Temple{
+    background-color: whitesmoke;
+    border-top-left-radius: 2rem;
+    padding: 0.5rem;
+    border-left: 5px  solid gold; 
 }
 
 footer{
