--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,14 @@ article{
     background-color: whitesmoke;
     border-top-left-radius: 2rem;
     padding: 0.5rem;
-    border-left: 5px  solid gold; 
+    border-left: 5px  groove gold; 
+}
+
+#Banff{
+    background-color: rgb(112, 209, 112);
+    border-top-left-radius: 2rem;
+    padding: 0.5rem;
+    border-left: 5px groove grey;
 }
 
 footer{
